# personal_package

./: .gitignore  CACHING_WORKFLOW.md  CLAUDE.md  FUTURE_DEVELOPMENT_PLAN.md  GRANT_CLI_PLAN.md  IMPLEMENTATION_COMPLETE.md  MEDIA_REORGANIZER_DOCUMENTATION.md  PLEX_CLI_IMPLEMENTATION_PLAN.md  PROJECT_STATUS_BASELINE.md  README.md  REORGANIZATION_IMPLEMENTATION_PLAN.md  REORGANIZATION_IMPLEMENTATION_SUMMARY.md  REVISED_PHASE1_PLAN.md  TV_FILE_ORGANIZER.md  TV_ORGANIZATION_DISPLAY_IMPROVEMENTS.md  TV_ORGANIZER_INSTRUCTIONS.md  analysis_report_20250622_234510.txt  issues.txt  movie_duplicates_temp.py  pyproject.toml  re-organize.md  run_media_assistant.py  run_media_autoorganizer.py  run_metadata_enrichment.py  run_movie_scanner.py  run_tv_organization.py  temp_cli.py  test_bedrock.py  test_enhanced_duplicate_detection.py  test_tv_organizer_phase0.py  tv_demo.py  tv_duplicate_report.txt  tv_enhanced_duplicate_report.txt  tv_organizer.py
.claude/: settings.local.json
cache/: move_decisions_20250624_190249.json  move_decisions_20250624_192124.json  move_decisions_20250624_200726.json
database/: media_classifications.db  movie_ratings.db
file_managers/: __init__.py
file_managers/cli/: __init__.py  file_manager.py  movie_duplicates.py  personal_cli.py
file_managers/plex/: __init__.py
file_managers/plex/cli/: __init__.py  media_assistant.py  media_database_cli.py  tv_organizer.py
file_managers/plex/config/: __init__.py  config.py  (+1 more)
file_managers/utils/: __init__.py  file_utils.py
reports/: .gitkeep
tests/: __init__.py  test_file_utils.py  test_movie_scanner.py
(+45 files in other folders)
